# iracing-screenshot-tool

./: .babelrc  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierrc  .tmp-electron-sources.js  .tmp-window-debug.js  .travis.yml  .yo-rc.json  LICENSE  README.md  RELEASE-NOTES-v3.0.0.md  RELEASE-NOTES-v3.0.1.md  RELEASE-NOTES-v3.0.2.md  RELEASE-NOTES-v3.0.3.md  RELEASE-NOTES-v3.0.4.md  RELEASE-NOTES-v3.0.5.md  RELEASE-NOTES-v3.1.0.md  RELEASE-NOTES-v3.1.1.md  config.js  electron.vite.config.mjs  eslint.config.js  index.css  index.html  index.js  jimp-worker.js  license  menu.js  package-lock.json  package.json  readme.md  renderer.js  screenshot.js  tsconfig.json  vitest.config.mjs
.github/workflows/: build.yml  lint.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: missing-app-icon.md  user-capture-res-regression.md
.tmp-inspect/: irsdk-node-4.4.0.tgz
_scripts/: build-dev.js  build.js  dev-runner.js  installer.nsh  release-helpers.js  release-helpers.test.js  release.js  webpack.main.config.js  webpack.renderer.config.js  webpack.web.config.js  webpack.workers.config.js
bot/: .env.example  .gitignore  README.md  babel.config.cjs  package-lock.json  package.json
native/: wgc-capture.node
native/wgc-capture/: Cargo.toml
native/wgc-capture/src/: lib.rs
node-irsdk/: package-lock.json  package.json
src/: index.ejs
workers/: image-loader.worker.js
(+319 files in other folders)
